Logger added. Refactoring.